--- a/src/app/pages/checkout/checkout-summary/checkout-summary.component.html
+++ b/src/app/pages/checkout/checkout-summary/checkout-summary.component.html
@@ -5,21 +5,22 @@
   <div class="card-body">
     <!-- Cart Items -->
     <div class="cart-items">
-      <div class="cart-item" *ngFor="let item of cartService.items()">
+      <div class="cart-item" *ngIf="product">
         <div class="d-flex align-items-center">
-          <img [src]="item.product.image" alt="item.product.nameAr" class="item-image">
+          <img
+            [src]="product.mainImageURL"
+            alt="item.product.nameAr"
+            class="item-image"
+          />
           <div class="item-details">
-            <h6 class="item-title mb-1">{{ item.product.nameAr }}</h6>
-            <div class="d-flex justify-content-between">
-              <span class="item-price">{{ item.product.price | currency:'SAR':'symbol':'1.0-0' }}</span>
-              <span class="item-quantity">الكمية: {{ item.quantity }}</span>
-            </div>
+            <h6 class="item-title mb-1">{{ product.name }}</h6>
+            <div class="d-flex justify-content-between"></div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Order Summary -->
+    <!-- Order Summary
     <div class="order-summary mt-4">
       <div class="summary-row">
         <span>المجموع الفرعي</span>
@@ -39,7 +40,6 @@
       </div>
     </div>
 
-    <!-- Promo Code -->
     <div class="promo-code mt-4">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="كود الخصم">
@@ -47,7 +47,6 @@
       </div>
     </div>
 
-    <!-- Secure Checkout Notice -->
     <div class="secure-checkout mt-4">
       <div class="d-flex align-items-center justify-content-center">
         <i class="fas fa-lock me-2"></i>
@@ -59,6 +58,6 @@
         <i class="fab fa-cc-amex mx-1"></i>
         <i class="fab fa-cc-paypal mx-1"></i>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
