--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -31,7 +31,11 @@
   transform: translateY(-10px);
   box-shadow: 0 10px 30px rgba(0,0,0,0.2) !important;
 }
-
+.category-card img {
+  width: 100%;
+  height: 50%;
+  transition: transform 0.3s ease;
+}
 .product-card {
   transition: all 0.3s ease;
   border: none !important;
